--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,9 @@
    }, 
    "icons": 
    {
-		"128": "icon128.png",
-		"48": "icon48.png",
-		"16": "icon16.png",
+		"128": "assets/icons/icon128.png",
+		"48": "assets/icons/icon48.png",
+		"16": "assets/icons/icon16.png",
 		"36": "assets/icons/icon36.png",
 		"57": "assets/icons/icon57.png",
 		"72": "assets/icons/icon72.png",
@@ -21,9 +21,9 @@
 		"152": "assets/icons/icon152.png"
    },
    "description": "Receive and listen to FM and AM radio or HAM broadcasts on your browser using an RTL2832U-based USB digital tuner dongle.",
-   "name": "SDR-FUNK USB",
-   "short_name": "SDR-FUNK",
-   "author": "Wiesel",
+   "name": "SDRFUNK",
+   "short_name": "SDRFUNK",
+   "author": "silicator a.k.a. Wiesel",
    "manifest_version": 2,
    "offline_enabled": true,
    "options_ui": {"page": "options.html", "open_in_tab": false},
@@ -44,20 +44,9 @@
    {
    "usbDevices": 
    [
-   {
-         "productId": 2838,
-         "vendorId": 3034
-	  },
-   
-	  {
-         "productId": 10290,
-         "vendorId": 3034,
-	  }, 
-	  {
-         "productId": 10296,
-         "vendorId": 3034
-         
-	  }, 
+	  {"productId": 2838, "vendorId": 3034, "productName": "NooElec NESDR SMART"},
+	  {"productId": 10290, "vendorId": 3034, "productName": "NooElec NESDR SMART"}, 
+	  {"productId": 10296, "vendorId": 3034, "productName": "Generic RTL2832U OEM - Hama nano"}, 
 	  {"productId": 26240, "vendorId": 1043, "productName": "DigitalNow Quad DVB-T PCI-E card"},
 	  {"productId": 28431, "vendorId": 1043, "productName": "Leadtek WinFast DTV Dongle mini D"},
 	  {"productId": 28799, "vendorId": 1112, "productName": "Genius TVGo DVB-T03 USB dongle (Ver. B)"},
