adding & cleaning VID/PIDs
adding & cleaning VID/PIDs

--- a/manifest.json
+++ b/manifest.json
@@ -44,49 +44,49 @@
    {
    "usbDevices": 
    [
-	  {"productId": 2838, "vendorId": 3034},
+	  {"productId": 10296, "vendorId": 3034},
+	  {"productId": 10290, "vendorId": 3034},
 	  {"productId": 10290, "vendorId": 3034}, 
-	  {"productId": 10296, "vendorId": 3034}, 
-	  {"productId": 26240, "vendorId": 1043, "productName": "DigitalNow Quad DVB-T PCI-E card"},
-	  {"productId": 28431, "vendorId": 1043, "productName": "Leadtek WinFast DTV Dongle mini D"},
-	  {"productId": 28799, "vendorId": 1112, "productName": "Genius TVGo DVB-T03 USB dongle (Ver. B)"},
-	  {"productId": 169, "vendorId": 3277, "productName": "Terratec Cinergy T Stick Black (rev 1)"},
-	  {"productId": 179, "vendorId": 3277, "productName": "Terratec NOXON DAB/DAB+ USB dongle (rev 1)"},
-	  {"productId": 180, "vendorId": 3277, "productName": "Terratec Deutschlandradio DAB Stick"},
-	  {"productId": 181, "vendorId": 3277, "productName": "Terratec NOXON DAB Stick - Radio Energy"},
-	  {"productId": 183, "vendorId": 3277, "productName": "Terratec Media Broadcast DAB Stick"},
-	  {"productId": 184, "vendorId": 3277, "productName": "Terratec BR DAB Stick"},
-	  {"productId": 185, "vendorId": 3277, "productName": "Terratec WDR DAB Stick"},
-	  {"productId": 192, "vendorId": 3277, "productName": "Terratec MuellerVerlag DAB Stick"},
-	  {"productId": 198, "vendorId": 3277, "productName": "Terratec Fraunhofer DAB Stick"},
-	  {"productId": 211, "vendorId": 3277, "productName": "Terratec Cinergy T Stick RC (Rev.3)"},
-	  {"productId": 215, "vendorId": 3277, "productName": "Terratec T Stick PLUS"},
-	  {"productId": 224, "vendorId": 3277, "productName": "Terratec NOXON DAB/DAB+ USB dongle (rev 2)"},
-	  {"productId": 20512, "vendorId": 5460, "productName": "PixelView PV-DT235U(RN)"},
-	  {"productId": 305, "vendorId": 5460, "productName": "Astrometa DVB-T/DVB-T2"},
-	  {"productId": 307, "vendorId": 5460, "productName": "HanfTek DAB+FM+DVB-T"},
-	  {"productId": 1568, "vendorId": 6235, "productName": "Compro Videomate U620F"},
-	  {"productId": 1616, "vendorId": 6235, "productName": "Compro Videomate U650F"},
-	  {"productId": 1664, "vendorId": 6235, "productName": "Compro Videomate U680F"},
-	  {"productId": 54163, "vendorId": 7040, "productName": "GIGABYTE GT-U7300"},
-	  {"productId": 54164, "vendorId": 7040, "productName": "DIKOM USB-DVBT HD"},
-	  {"productId": 54165, "vendorId": 7040, "productName": "Peak 102569AGPK"},
-	  {"productId": 54167, "vendorId": 7040, "productName": "KWorld KW-UB450-T USB DVB-T Pico TV"},
-	  {"productId": 54168, "vendorId": 7040, "productName": "Zaapa ZT-MINDVBZP"},
-	  {"productId": 54173, "vendorId": 7040, "productName": "SVEON STV20 DVB-T USB & FM"},
-	  {"productId": 54180, "vendorId": 7040, "productName": "Twintech UT-40"},
-	  {"productId": 54184, "vendorId": 7040, "productName": "ASUS U3100MINI_PLUS_V2"},
-	  {"productId": 54191, "vendorId": 7040, "productName": "SVEON STV27 DVB-T USB & FM"},
-	  {"productId": 54192, "vendorId": 7040, "productName": "SVEON STV21 DVB-T USB & FM"},
-	  {"productId": 4353, "vendorId": 7449, "productName": "Dexatek DK DVB-T Dongle (Logilink VG0002A)"},
-	  {"productId": 4354, "vendorId": 7449, "productName": "Dexatek DK DVB-T Dongle (MSI DigiVox mini II V3.0)"},
-	  {"productId": 4355, "vendorId": 7449, "productName": "Dexatek Technology Ltd. DK 5217 DVB-T Dongle"},
-	  {"productId": 4356, "vendorId": 7449, "productName": "MSI DigiVox Micro HD"},
-	  {"productId": 43011, "vendorId": 8013, "productName": "Sweex DVB-T USB"},
-	  {"productId": 47107, "vendorId": 8013, "productName": "GTek T803"},
-	  {"productId": 51203, "vendorId": 8013, "productName": "Lifeview LV5TDeluxe"},
-	  {"productId": 53894, "vendorId": 8013, "productName": "MyGica TD312"},
-	  {"productId": 55299, "vendorId": 8013, "productName": "PROlectrix DV107669"}
+	  {"productId": 26240, "vendorId": 1043},
+	  {"productId": 28431, "vendorId": 1043},
+	  {"productId": 28799, "vendorId": 1112},
+	  {"productId": 169, "vendorId": 3277},
+	  {"productId": 179, "vendorId": 3277},
+	  {"productId": 180, "vendorId": 3277},
+	  {"productId": 181, "vendorId": 3277},
+	  {"productId": 183, "vendorId": 3277},
+	  {"productId": 184, "vendorId": 3277},
+	  {"productId": 185, "vendorId": 3277},
+	  {"productId": 192, "vendorId": 3277},
+	  {"productId": 198, "vendorId": 3277},
+	  {"productId": 211, "vendorId": 3277},
+	  {"productId": 215, "vendorId": 3277},
+	  {"productId": 224, "vendorId": 3277},
+	  {"productId": 20512, "vendorId": 5460},
+	  {"productId": 305, "vendorId": 5460},
+	  {"productId": 307, "vendorId": 5460},
+	  {"productId": 1568, "vendorId": 6235},
+	  {"productId": 1616, "vendorId": 6235},
+	  {"productId": 1664, "vendorId": 6235},
+	  {"productId": 54163, "vendorId": 7040},
+	  {"productId": 54164, "vendorId": 7040},
+	  {"productId": 54165, "vendorId": 7040},
+	  {"productId": 54167, "vendorId": 7040},
+	  {"productId": 54168, "vendorId": 7040},
+	  {"productId": 54173, "vendorId": 7040},
+	  {"productId": 54180, "vendorId": 7040},
+	  {"productId": 54184, "vendorId": 7040},
+	  {"productId": 54191, "vendorId": 7040},
+	  {"productId": 54192, "vendorId": 7040},
+	  {"productId": 4353, "vendorId": 7449},
+	  {"productId": 4354, "vendorId": 7449},
+	  {"productId": 4355, "vendorId": 7449},
+	  {"productId": 4356, "vendorId": 7449},
+	  {"productId": 43011, "vendorId": 8013},
+	  {"productId": 47107, "vendorId": 8013},
+	  {"productId": 51203, "vendorId": 8013},
+	  {"productId": 53894, "vendorId": 8013},
+	  {"productId": 55299, "vendorId": 8013}
 	  ]
 	}],
    "permissions": 
