--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
 
    "background":
     {
+	  "persistent": true,
       "scripts": ["js/main.js", "js/background.js"],
       "page": "html/background.html"
     },
@@ -9,7 +10,7 @@
    "icons":
    {
 		"16": "assets/icons/icon16.png",
-    "32": "assets/icons/icon32.png",
+		"32": "assets/icons/icon32.png",
 		"36": "assets/icons/icon36.png",
 		"48": "assets/icons/icon48.png",
 		"57": "assets/icons/icon57.png",
@@ -63,8 +64,9 @@
    "short_name": "SDRFunk",
    "author": "silicator a.k.a. Wiesel",
    "version": "1.1.6",
+   "minimum_chrome_version": "49.0", 
    "homepage_url": "https://github.com/silicator/SDRFunk/tree/firefox-version/",
-   "default_locale": "en-us",
+   "default_locale": "en",
    "incognito": "spanning",
    "devtools_page": "html/devtools.html",
    "chrome_url_overrides" : {"newtab": "about:blank"},
@@ -80,7 +82,7 @@
     "gecko":
     {
       "id": "extentionid@example.org",
-      "strict_min_version": "66.0.0"
+      "strict_min_version": "66.0"
     }
    },
 
@@ -95,6 +97,7 @@
    "content_scripts":
    [
     {
+    "all_frames": true,
     "matches": ["<all_urls>"],
     "js": ["js/interface.js", "js/main.js"]
     }
@@ -139,20 +142,20 @@
 	  {"productId": 1568, "vendorId": 6235},
 	  {"productId": 1616, "vendorId": 6235},
 	  {"productId": 1664, "vendorId": 6235},
-    {"productId": 4353, "vendorId": 7449},
-    {"productId": 4354, "vendorId": 7449},
-    {"productId": 4355, "vendorId": 7449},
-    {"productId": 4356, "vendorId": 7449},
-    {"productId": 10296, "vendorId": 3034},
-	  {"productId": 10290, "vendorId": 3034},
-    {"productId": 20512, "vendorId": 5460},
-    {"productId": 26240, "vendorId": 1043},
-    {"productId": 28431, "vendorId": 1043},
-    {"productId": 28799, "vendorId": 1112},
-    {"productId": 43011, "vendorId": 8013},
-    {"productId": 47107, "vendorId": 8013},
-    {"productId": 51203, "vendorId": 8013},
-    {"productId": 53894, "vendorId": 8013},
+      {"productId": 4353, "vendorId": 7449},
+      {"productId": 4354, "vendorId": 7449},
+      {"productId": 4355, "vendorId": 7449},
+      {"productId": 4356, "vendorId": 7449},
+      {"productId": 10296, "vendorId": 3034},
+      {"productId": 10290, "vendorId": 3034},
+      {"productId": 20512, "vendorId": 5460},
+      {"productId": 26240, "vendorId": 1043},
+      {"productId": 28431, "vendorId": 1043},
+      {"productId": 28799, "vendorId": 1112},
+      {"productId": 43011, "vendorId": 8013},
+      {"productId": 47107, "vendorId": 8013},
+      {"productId": 51203, "vendorId": 8013},
+      {"productId": 53894, "vendorId": 8013},
 	  {"productId": 54163, "vendorId": 7040},
 	  {"productId": 54164, "vendorId": 7040},
 	  {"productId": 54165, "vendorId": 7040},
@@ -174,7 +177,7 @@
    "clipboardWrite", "storage", "privacy", "unlimitedStorage", "browsingData",
    "downloads", "downloads.open", "<all_urls>", "pkcs11", "theme", "identity",
    "menus", "proxy", "pageCapture", "dns", "alarms", "contextualIdentities",
-   "debugger", "nativeMessaging", "usb"
+   "nativeMessaging"
    ]
 
  }
