--- a/manifest.json
+++ b/manifest.json
@@ -13,10 +13,10 @@
    "description": "Receive and listen to FM/AM/SSB HAM radio broadcasts on your browser using an RTL2832U-based USB digital tuner dongle.",
    "name": "SDRFunk Radio Receiver",
    "short_name": "SDRFunk",
-   "author": "silicator a.k.a. Wiesel",
-   "homepage_url": "https://github.com/silicator/SDRFunk/",
+   "author": "wodowiesel",
+   "homepage_url": "https://github.com/wodowiesel/SDRFunk/",
    "minimum_chrome_version": "62.0",
-   "update_url": "https://github.com/silicator/SDRFunk/tree/master/js/updates.json",
+   "update_url": "https://github.com/wodowiesel/SDRFunk/tree/master/js/updates.json",
    "version": "1.1.6",
    "version_name": "1.1.6 experimental",
    "offline_enabled": true,
